Dodanie paginacji w książkach

--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -32,6 +32,8 @@
   </div>
 </div>
 
+<%= will_paginate @entries %>
+
 <table class="table table-condensed top-buffer-20">
 
   <thead>
@@ -178,3 +180,5 @@
     </tr>
   </tfoot>
 </table>
+
+<%= will_paginate @entries %>
