--- a/app/views/reports/_finance_template.html.erb
+++ b/app/views/reports/_finance_template.html.erb
@@ -97,3 +97,7 @@
     </table>
   </div>
 </div>
+<% if @display_pdf_link %>
+    <div><%= link_to 'Pobierz raport jako pdf', finance_report_path(:format => :pdf), class: 'btn btn=sm btn-success' %>
+    </div>
+<% end %>
