--- a/app/views/shared/_inventory_entries_select.html.erb
+++ b/app/views/shared/_inventory_entries_select.html.erb
@@ -7,7 +7,7 @@
   <div class="col-md-10 col-md-offset-2">
     <select onchange="selectedUnitChanged(this.value)" style="padding: 0; width:100%;">
       <% @user_units.each do |unit| %>
-        <option value="<%= unit.id %>" <%= unit.id == session[:current_unit_id] ? "selected='selected'" : "" %>><%= unit.name %></option>
+        <option value="<%= unit.id %>" <%= unit.id == session[:current_unit_id] ? "selected='selected'" : "" %>><%= unit.code %> - <%= unit.name %></option>
       <% end %>
     </select>
   </div>
