--- a/app/views/reports/finance.pdf.erb
+++ b/app/views/reports/finance.pdf.erb
@@ -51,7 +51,7 @@
           wymienionej powyżej jednostki organizacyjnej. Potwierdzam posiadanie kwoty salda na
           dzień <%= @report_end_date %>
           <hr/>
-          (data, imię, nazwisko i podpis komendanta (opiekuna) jednostki składającej sprawozdanie)
+          <i>(data, imię, nazwisko i podpis komendanta (opiekuna) jednostki składającej sprawozdanie)</i>
         </td>
       </tr>
     </table>
