Linki do raportów pdf tworzone w kontrolerze

--- a/app/views/reports/all_finance.html.erb
+++ b/app/views/reports/all_finance.html.erb
@@ -19,4 +19,8 @@
   </div>
 </div>
 
+<br/>
+<div><%= link_to 'Pobierz jako pdf', @pdf_report_link, class: 'btn btn=sm btn-success' %>
+</div>
+
 <%= render 'finance_template' %>
