--- a/app/views/reports/finance.pdf.erb
+++ b/app/views/reports/finance.pdf.erb
@@ -16,9 +16,9 @@
     <table class="table table-condensed table-bordered">
       <tr>
         <td class="text-center" style="font-size: small"><b>
-          SPRAWOZDANIE FINANSOWE ZA OKRES OD <%= @report_start_date %> DO <%= @report_end_date %>
+          <span class="text-uppercase"><%= @report_title %> za okres od <%= @report_start_date %> DO <%= @report_end_date %></span>
           <br/>
-          DLA
+          <span class="text-uppercase">DLA</span>
           <br/>
           <%= @selected_unit_name %>
         </b>
