--- a/app/views/reports/finance.html.erb
+++ b/app/views/reports/finance.html.erb
@@ -32,4 +32,8 @@
   </div>
 </div>
 
+<br/>
+<div><%= link_to 'Pobierz jako pdf', @pdf_report_link, class: 'btn btn=sm btn-success' %>
+</div>
+
 <%= render 'finance_template' %>
