Dodanie osobnych widoków dla każdego rodzaju raportu

--- a/app/views/reports/all_finance.pdf.erb
+++ b/app/views/reports/all_finance.pdf.erb
@@ -16,11 +16,9 @@
     <table class="table table-condensed table-bordered">
       <tr>
         <td class="text-center" style="font-size: small"><b>
-          <span class="text-uppercase">Sprawozdanie finansowe za okres od <%= @report_start_date %> do <%= @report_end_date %></span>
+          <span class="text-uppercase">Całościowe sprawozdanie finansowe za okres od <%= @report_start_date %>
+            do <%= @report_end_date %></span>
           <br/>
-            <span class="text-uppercase">dla</span>
-            <br/>
-            <%= @selected_unit_name %>
         </b>
         </td>
       </tr>
