--- a/app/views/reports/one_percent.pdf.erb
+++ b/app/views/reports/one_percent.pdf.erb
@@ -48,7 +48,7 @@
 </div>
 
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-12 top-buffer-80">
     Sporządził: <%= current_user.first_name %> <%= current_user.last_name %>
     <br/>
     <%= @generation_time.strftime ('%Y-%m-%d %H:%M:%S') %>
