--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -75,7 +75,7 @@
       <tr>
         <td>
           <small>
-            <span style="display: block;"><%= position+=1 =%>.</span>
+            <span style="display: block;"><%= position+=1 %>.</span>
             <% if @journal.is_open? %>
               <% if can? :update, entry %><%= link_to edit_entry_path(entry) do%><span class="glyphicon glyphicon-pencil" title="Edytuj"></span><%end%><% end %>
               <% if can? :destroy, entry %><%= link_to entry, data: { confirm: 'Na pewno usunąć wpis?'}, method: :delete do%><span class="glyphicon glyphicon-trash" title="Usuń"></span><%end%><% end %>
