--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -11,6 +11,10 @@
     <b>Nazwa:</b>
     <%= @group.name %>
   </div>
+  <div>
+    <b>Kod:</b>
+    <%= @group.code %>
+  </div>
 </div>
 
 <div class="well well-small top-buffer-20">
