Pokaż użytkownikom, że drukowanie będzie możliwe: alert 'dostępne wrkótce'

--- a/app/views/inventory_entries/index.html.erb
+++ b/app/views/inventory_entries/index.html.erb
@@ -11,6 +11,7 @@
           <span class="glyphicon glyphicon-minus"></span>&nbsp;&nbsp;Nowy rozchód
         <% end %>
       <% end %>
+      <%= link_to "<span class='glyphicon glyphicon-print'></span>&nbsp;&nbsp;Drukuj".html_safe, '#', onclick: 'alert("Generowanie plików pdf dostępne wkrótce")', class: 'btn btn-sm btn-default' %>
     </small>
   </div>
   <div class="col-md-6">
