--- a/app/views/reports/all_finance.html.erb
+++ b/app/views/reports/all_finance.html.erb
@@ -22,7 +22,7 @@
 <div class="row">
   <div class="col-md-2 col-md-offset-10">
     <div class="pull-right top-buffer-20">
-      <%= link_to "<span class='glyphicon glyphicon-print'></span>&nbsp;&nbsp;Drukuj".html_safe, '#', onclick: 'alert("Generowanie plików pdf dostępne wkrótce")', class: 'btn btn-sm btn-default' %>
+      <%= link_to '<span class="glyphicon glyphicon-print"></span>&nbsp;&nbsp;Drukuj'.html_safe, @pdf_report_link, class: 'btn btn-sm btn-success' %>
     </div>
   </div>
 </div>
