--- a/app/views/reports/all_finance.pdf.erb
+++ b/app/views/reports/all_finance.pdf.erb
@@ -2,8 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'/>
-  <%= wicked_pdf_stylesheet_link_tag "application" -%>
-  <%= wicked_pdf_stylesheet_link_tag wicked_pdf_asset_base64("application") %>
+  <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" %>
   <style type="text/css">
     div {
       font-size: smaller
