--- a/app/views/reports/all_one_percent.pdf.erb
+++ b/app/views/reports/all_one_percent.pdf.erb
@@ -2,8 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'/>
-  <%= wicked_pdf_stylesheet_link_tag "application" -%>
-  <%= wicked_pdf_stylesheet_link_tag wicked_pdf_asset_base64("application") %>
+  <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" %>
   <style type="text/css">
     div {
       font-size: smaller
@@ -44,7 +43,7 @@
 </div>
 
 <div class="row">
-  <div class="col-md-12 top-buffer-100">
+  <div class="col-md-12" style="margin-top: 100px">
     Sporządził: <%= current_user.first_name %> <%= current_user.last_name %>
     <br/>
     <%= @generation_time.strftime ('%Y-%m-%d %H:%M:%S') %>
