--- a/app/views/shared/_inventory_entries_select.html.erb
+++ b/app/views/shared/_inventory_entries_select.html.erb
@@ -1,13 +1,24 @@
 <div class="row">
   <script type="text/javascript">
    function selectedUnitChanged(unitId) {
-     document.location.href = "<%= inventory_entries_path %>?unit_id=" + unitId.toString();
+     document.location.href = "<%= inventory_entries_path %>?unit_id=" + unitId.toString() + "&year=<%= session[:current_year] %>";
+   }
+   function selectedYearChanged(year) {
+       document.location.href = "<%= inventory_entries_path %>?unit_id=<%= session[:current_unit_id] %>&year=" + year;
    }
   </script>
-  <div class="col-md-10 col-md-offset-2">
+
+  <div class="col-md-10">
     <select onchange="selectedUnitChanged(this.value)" style="padding: 0; width:100%;">
       <% @user_units.each do |unit| %>
         <option value="<%= unit.id %>" <%= unit.id == session[:current_unit_id] ? "selected='selected'" : "" %>><%= unit.code %> - <%= unit.name %></option>
+      <% end %>
+    </select>
+  </div>
+  <div class="col-md-2">
+    <select onchange="selectedYearChanged(this.value)" style="padding: 0; width:100%;">
+      <% @years.each do |year| %>
+        <option value="<%= year %>" <%= year == session[:current_year] ? "selected='selected'" : "" %>><%= year %></option>
       <% end %>
     </select>
   </div>
