Nie przenoś minusa do linii wyżej przy 'długich' kwotach #115

--- a/app/views/journals/show.pdf.erb
+++ b/app/views/journals/show.pdf.erb
@@ -33,6 +33,14 @@
       background-color:#ddd;
     }
 
+    .income {
+      white-space: nowrap;
+    }
+
+    .expense {
+      white-space: nowrap;
+    }
+
   </style>
 </head>
 
