Pokazuj kody jednostek na liście przy raportach finansowych

--- a/app/views/inventory_entries/index.pdf.erb
+++ b/app/views/inventory_entries/index.pdf.erb
@@ -18,7 +18,7 @@
     <table class="table table-condensed table-bordered">
       <tr>
         <td class="text-center" style="font-size: small"><b>
-          <span class="text-uppercase">Książka inwentarzowa na <%= @years_label %> dla <%= @unit.code %> - <%= @unit.name %></span>
+          <span class="text-uppercase">Książka inwentarzowa na <%= @years_label %> dla <%= @unit.full_name %></span>
           <br/>
         </b>
         </td>
