--- a/app/views/journals/show.pdf.erb
+++ b/app/views/journals/show.pdf.erb
@@ -49,8 +49,7 @@
     <table class="table table-condensed table-bordered">
       <tr>
         <td class="text-center" style="font-size: small"><b>
-          <span class="text-uppercase"><%= @journal.journal_type %> na <%= @journal.year %> rok dla <%= @journal.unit.code %>
-            - <%= @journal.unit.name %>
+          <span class="text-uppercase"><%= @journal.journal_type %> na <%= @journal.year %> rok dla <%= @journal.unit.full_name %>
           </span>
           <br/>
         </b>
