--- a/app/views/reports/finance.html.erb
+++ b/app/views/reports/finance.html.erb
@@ -16,7 +16,7 @@
     <div class="pull-right top-buffer-20">
       <select class="no-margin" onchange="reloadForUnit(this.value)">
         <% @user_units.each do |unit| %>
-          <option value="<%= unit.id %>" <%= unit.id.to_s == @selected_unit_id.to_s ? 'selected=selected' : '' %>><%= unit.name %></option>
+          <option value="<%= unit.id %>" <%= unit.id.to_s == @selected_unit_id.to_s ? 'selected=selected' : '' %>><%= unit.full_name %></option>
         <% end %>
       </select>
     </div>
